--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'com.google.android.libraries.places:places:3.1.0'
+    implementation 'com.google.android.libraries.places:places:3.2.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'androidx.contentpager:contentpager:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.1'
-
+    implementation 'org.ejml:ejml-simple:0.38'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
